Terminamos de limpiar outliers, estandarizamos e imputamos variable energy_star_rating. También eliminamos variables relacionadas a la niebla y velocidad de viento.
Queda data frame estandarizado + variables
categoricas + variable target

--- a/Diccionario.ipynb
+++ b/Diccionario.ipynb
@@ -71,7 +71,11 @@
     "\n",
     "**max_wind_speed**: velocidad máxima del viento en la ubicación del edificio\n",
     "\n",
-    "**days_with_fog**: número de días con niebla en la ubicación del edificio"
+    "**days_with_fog**: número de días con niebla en la ubicación del edificio\n",
+    "\n",
+    "**site_eui**: cantidad de calor y electricidad consumidos por un edificio (medido en kBtu/ft2)\n",
+    "\n",
+    "\n"
    ]
   },
   {
